--- a/CSS/HomePage.css
+++ b/CSS/HomePage.css
@@ -1,7 +1,6 @@
 body {
-    background: #101010;
+    background: #121212;
 }
-
 
 .Link {
     transition: 0.25s;
@@ -30,23 +29,28 @@ body {
 .Item {
     display: flex;
     flex-direction: column;
-    border-style: solid;
-    border-width: thin;
-    border-color: #DADCE0;
-    border-radius: 10px;
-    background-color: #404040;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    background-color: #212532;
+    margin-top: 15px;
+    margin-bottom: 15px;
     margin-left: auto;
     margin-right: auto;
-    padding: 5px;
+    padding: 10px;
     min-width: 300px;
+    
+    border-radius: 10px;
+    border-top: 2px solid #0D9737;
+    border-right: 2px solid #0D9737;
+    border-left: 2px solid #0D9737;
+    border-bottom: 2px solid #0D9737;
+}
 
-    /* max-width: 700px; */
+.Item:hover {
+    background-color: #252936;
+    padding: 20px;
 }
 
 .Item__Name {
-    font-size: 1.5em;
+    font-size: 2em;
 }
 
 .Item__Price {
@@ -70,4 +74,8 @@ body {
 .dark:focus {
     background-color: #404040;
     color: #D0D0D0;
+}
+
+.font_style {
+    font-family: 'Roboto', sans-serif;
 }
