--- a/CSS/Login.css
+++ b/CSS/Login.css
@@ -116,6 +116,14 @@ a.active.nav-link {
     margin-right: auto;
 }
 
+.form__message {
+    background-color: #FF000020;
+    color: #FF0000;
+    padding: 5px 5px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .form__input {
     -webkit-appearance: none;
     width: 100%;
