--- a/CSS/Login.css
+++ b/CSS/Login.css
@@ -1,10 +1,7 @@
-body {
-    background-color: #121212;
-    padding: 25px;
-}
+@import "UI.css";
 
-.font_style {
-    font-family: 'Roboto', sans-serif;
+body {
+    padding: 25px;
 }
 
 .FormDiv {
@@ -60,31 +57,6 @@ body {
 a.active.nav-link {
     background-color: #212532 !important;
     color: #ffffff !important;
-}
-
-.Link:link {
-    color: #E0E0E0 !important;
-    text-decoration: none !important;
-}
-
-.Link:visited {
-    color: #D0D0D0 !important;
-    text-decoration: none !important;
-}
-
-.Link:hover {
-    color: #FFFFFF !important;
-    text-decoration: none !important;
-}
-
-.Link:active {
-    color: #D0D0FF !important;
-    text-decoration: none !important;
-}
-
-.Link {
-    color: #E0E0E0 !important;
-    transition: 0.25s;
 }
 
 .form {
